# jockmkt_trading_bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
strategies/ipo/: heat_check.py
strategies/live/: dump_late.py  odds-api-output.json  player_props_1b8414cf377d4a5c4ea7801ef70785fa.csv  player_props_1b8414cf377d4a5c4ea7801ef70785fa.json  player_props_407dec919e4289f64a19f2c055664145.csv  player_props_407dec919e4289f64a19f2c055664145.json  player_props_96d47d41251c8e6991fe067926d156bf.csv  player_props_96d47d41251c8e6991fe067926d156bf.json  players_sentiments.csv  sentiment_reddit.py  short_early_sentiment.py  the_odds_api.py
strategies/live/playerprops/: fantasy_points_5ff152c839ca46eda8644a041e239e46.csv  fantasy_points_efa483c52f406823a16b201f09e12249.csv  player_fps_summary_5ff152c839ca46eda8644a041e239e46.json  player_fps_summary_efa483c52f406823a16b201f09e12249.json  player_fps_summary_efa483c52f406823a16b201f09e12249_with_sentiment.json  player_props_5ff152c839ca46eda8644a041e239e46.json  player_props_efa483c52f406823a16b201f09e12249.json
